14 타이틀, 일시정지, UI 바인딩

--- a/WEEK-14/Config/DefaultEngine.ini
+++ b/WEEK-14/Config/DefaultEngine.ini
@@ -22,3 +22,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/Lab/TitleLevel.TitleLevel
+
